<resources>
    <string name="app_name">StoryOfEgupt</string>
    <string name="menu_fragment">Menu fragment</string>
    <string name="loading">Loading…</string>
    <string name="play_button_text">PLAY</string>
    <string name="help_button_text">HELP</string>
    <string name="go_back_button_text">Back</string>
    <string name="help_title">Help</string>
    <string name="help_text">I can\'t help you…</string>
    <string name="game_title">Game</string>
    <string name="retry">Retry</string>
    <string name="balance_text">Balance: %d</string>
    <string name="retry_cost">Retry cost: %d</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="facebook_app_id">1617487552077120</string>
    <string name="facebook_app_client_mark">40b75e2e20b9702dcd22397e2bd83b7c</string>
</resources>