<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goBackButton"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_ripple"
        android:text="@string/go_back_button_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/balanceInfo"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/balance_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackButton" />

    <TextView
        android:id="@+id/retryCost"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/retry_cost"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balanceInfo">

        <ImageView
            android:id="@+id/item1"
            android:layout_width="100dp"
            android:layout_height="72dp"
            app:srcCompat="@drawable/empty_item" />

        <ImageView
            android:id="@+id/item2"
            android:layout_width="100dp"
            android:layout_height="72dp"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/empty_item" />

        <ImageView
            android:id="@+id/item3"
            android:layout_width="100dp"
            android:layout_height="72dp"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/empty_item" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retryButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_ripple"
        android:text="@string/retry"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retryCost" />

    <TextView
        android:id="@+id/plusButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/retryCost"
        app:layout_constraintEnd_toStartOf="@+id/retryCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/retryCost" />

    <TextView
        android:id="@+id/minusButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/retryCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/retryCost"
        app:layout_constraintTop_toTopOf="@+id/retryCost" />
</androidx.constraintlayout.widget.ConstraintLayout>